--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -3,11 +3,13 @@
 
 name: Python package
 
-on:
-  push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+on: push
+
+# on:
+# push:
+#   branches: [master]
+# pull_request:
+#   branches: [master]
 
 jobs:
   build:
