--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -3,11 +3,12 @@
 
 name: Python package
 
-on:
-  push:
-    branches: [master, develop]
-  pull_request:
-    branches: [master, develop]
+on: push
+# on:
+#   push:
+#     branches: [master, develop]
+#   pull_request:
+#     branches: [master, develop]
 
 jobs:
   build:
