--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -3,12 +3,17 @@
 
 name: Upload Python Package
 
+# on:
+#   release:
+#     types: [created]
+# push:
+#   tags:
+#     - "v*"
+
 on:
-  release:
-    types: [created]
-  # push:
-  #   tags:
-  #     - "v*"
+  push:
+    tags:
+      - "v*.*.*"
 
 jobs:
   deploy:
@@ -24,7 +29,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install setuptools wheel twine
-      - name: Build and publish
+      - name: Build and publish to pypi
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME_PROD }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD_PROD }}
