--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools wheel twine
+          pip install setuptools setuptools-scm wheel twine
       - name: Build and publish to pypi
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME_PROD }}
