--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ max_line_length = 200
 count = True
 inline_quotes = single
 
-format = {yellow_bold}%(row)d${reset}:${green_bold}%(col)d${reset}: ${red_bold}%(code)s${reset} %(text)s
+#format = {yellow_bold}%(row)d${reset}:${green_bold}%(col)d${reset}: ${red_bold}%(code)s${reset} %(text)s
 
 [tool:pytest]
 minversion = 5.4.3
