--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,35 +1,29 @@
-# This workflows will upload a Python Package using Twine when a release is created
-# For more information see: https://help.github.com/en/actions/language-and-framework-guides/using-python-with-github-actions#publishing-to-package-registries
-
-name: Upload Package to PyPi
-
-# on:
-#   release:
-#     types: [created]
-# push:
-#   tags:
-#     - "v*"
+name: Release
 
 on:
-  push:
-    tags:
-      - "vvvvvvv*.*.*"
+  release:
+    types: [published]
 
 jobs:
-  deploy:
+  build:
+    name: Upload Package to PyPi
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: "3.x"
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install setuptools setuptools-scm wheel twine
+
       - name: Build and publish to pypi
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME_PROD }}
