--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  build:
+  publish:
     name: Create Release
     runs-on: ubuntu-latest
     steps:
@@ -20,3 +20,29 @@ jobs:
         uses: release-drafter/release-drafter@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  build:
+    name: Upload Package to PyPi Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.x"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install setuptools setuptools-scm wheel twine
+
+      - name: Build and publish to pypi
+        env:
+          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME_TEST }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD_TEST }}
+        run: |
+          python setup.py sdist bdist_wheel
+          twine upload dist/* -r pypitest
