--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -43,6 +43,7 @@ jobs:
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME_TEST }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD_TEST }}
+          TWINE_REPOSITORY: https://test.pypi.org/legacy/
         run: |
           python setup.py sdist bdist_wheel
           twine upload dist/* -r pypitest
