--- a/.github/workflows/prerelease.yaml
+++ b/.github/workflows/prerelease.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    name: Upload Package to PyPi Test
+    name: Upload Package to PyPi Test Repository
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
