adding piptest to workflow

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    name: Upload Package to PyPi
+    name: Upload Package to PyPi Repository
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
