--- a/.github/workflows/testrelease.yaml
+++ b/.github/workflows/testrelease.yaml
@@ -28,7 +28,6 @@ jobs:
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME_TEST }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD_TEST }}
-          TWINE_REPOSITORY: https://test.pypi.org/legacy/
         run: |
           python setup.py sdist bdist_wheel
-          twine upload dist/*
+          twine upload --repository-url https://test.pypi.org/legacy/ dist/*
