--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,10 +2,11 @@ name: Release
 
 on:
   release:
-    types: [published]
+    types: [published, released]
 
 jobs:
   build:
+    if: "!github.event.release.prerelease"
     name: Upload Package to PyPi Repository
     runs-on: ubuntu-latest
     steps:
