--- a/.github/workflows/testrelease.yaml
+++ b/.github/workflows/testrelease.yaml
@@ -2,7 +2,7 @@ name: Test Release
 
 on:
   release:
-    types: [created, edited, unpublished, prereleased]
+    types: [published, created, edited, unpublished, prereleased, released]
 
 jobs:
   build:
