--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,7 +2,8 @@ name: Release
 
 on:
   release:
-    types: [published, released]
+    #types: [published, released]
+    types: [released]
 
 jobs:
   build:
