--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -12,9 +12,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
 
+        # with:
+        #   fetch-depth: 0
       - name: Create Release
         id: create_release
         uses: release-drafter/release-drafter@v5
