--- a/.github/workflows/testrelease.yaml
+++ b/.github/workflows/testrelease.yaml
@@ -24,6 +24,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install setuptools setuptools-scm wheel twine
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          if [ -f requirements-test.txt ]; then pip install -r requirements-test.txt; fi
 
       - name: Build and publish to pypi test
         env:
