Fix linting configuration

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,8 +9,7 @@ ignore =
     CFQ002
 
 filename =
-    dashboard.py
-    volkswagencarnet.py
+    *.py
 
 exclude =
     .git,
@@ -19,17 +18,22 @@ exclude =
     *.md,
     *.cfg
 
-max_line_length = 127
+max_line_length = 250
 count = True
 inline_quotes = single
 
 #format = {yellow_bold}%(row)d${reset}:${green_bold}%(col)d${reset}: ${red_bold}%(code)s${reset} %(text)s
+
+[pycodestyle]
+max_line_length=250
+statistics = True
+ignore = E722
+count = True
+verbose = True
+show_source = True
 
 [tool:pytest]
 minversion = 5.4.3
 addopts = -ra -q
 testpaths = tests
 python_files = *_test.py
-pep8maxlinelength=250
-pep8ignore=* E731 \
-           * E402 \
