Fix some linter reported issues

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@ description-file = README.md
 
 [flake8]
 ignore =
+    E722,
     I201,
     W503,
     CFQ001,
@@ -21,6 +22,8 @@ exclude =
 max_line_length = 250
 count = True
 inline_quotes = single
+show_source = True
+statistics = True
 
 #format = {yellow_bold}%(row)d${reset}:${green_bold}%(col)d${reset}: ${red_bold}%(code)s${reset} %(text)s
 
