--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,18 +1,23 @@
 name-template: "v$RESOLVED_VERSION 🌈"
 tag-template: "v$RESOLVED_VERSION"
+change-template: "- #$NUMBER $TITLE @$AUTHOR"
+sort-direction: ascending
 categories:
   - title: "🚀 Features"
     labels:
       - "feature"
       - "enhancement"
+
   - title: "🐛 Bug Fixes"
     labels:
       - "fix"
       - "bugfix"
       - "bug"
+
   - title: "🧰 Maintenance"
-    label: "chore"
-change-template: "- $TITLE @$AUTHOR (#$NUMBER)"
+    label:
+      - "dependencies"
+
 version-resolver:
   major:
     labels:
