--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest
+          pip install flake8 pytest build check-wheel-contents
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           if [ -f requirements-test.txt ]; then pip install -r requirements-test.txt; fi
 
@@ -42,6 +42,14 @@ jobs:
           flake8 . --select=E9,F63,F7,F82
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --exit-zero --max-complexity=10 --max-line-length=127
+
       - name: Test with pytest
         run: |
           pytest
+
+      - name: Test build package
+        run: |
+          python -m build --sdist --wheel .
+          ls -l dist
+          check-wheel-contents dist/*.whl
+          python -m twine check dist/*
