--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,12 +24,14 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools setuptools-scm wheel twine
+          pip install build wheel twine
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Build and publish to pypi
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME_PROD }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD_PROD }}
         run: |
-          python setup.py sdist bdist_wheel
+          python -m build --sdist --wheel
+          python -m twine check dist/*
           twine upload dist/* -r pypi
