--- a/.github/workflows/testrelease.yaml
+++ b/.github/workflows/testrelease.yaml
@@ -31,5 +31,6 @@ jobs:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME_TEST }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD_TEST }}
         run: |
-          python setup.py sdist bdist_wheel
+          python -m build --sdist --wheel
+          python -m twine check dist/*
           twine upload --repository-url https://test.pypi.org/legacy/ dist/*
