--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ project_urls =
     Bug Tracker = https://github.com/robinostlund/volkswagencarnet/issues
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: Apache License 2.0
+    License :: OSI Approved :: Apache Software License
     Operating System :: OS Independent
 
 [options]
