--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [metadata]
 name = volkswagencarnet
+version = 1.0.0
 author = Robin Ostlund
 author_email = me@robinostlund.name
 description = Communicate with Volkswagen WeConnect
