--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -58,3 +58,5 @@ jobs:
         with:
           password: ${{ secrets.PYPI_TOKEN_TEST }}
           repository_url: https://test.pypi.org/legacy/
+          print_hash: true
+          skip_existing: true
