--- a/.github/workflows/testrelease.yaml
+++ b/.github/workflows/testrelease.yaml
@@ -35,10 +35,16 @@ jobs:
       #     python -m twine check dist/*
       #     twine upload --repository-url https://test.pypi.org/legacy/ dist/*
 
-      - name: Build package for Test PyPi
+      - name: Build package
         run: |
           python -m build --sdist --wheel --outdir dist/ .
           python -m twine check dist/*
+
+      - name: Upload package artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: package-artifact
+          path: dist/
 
       - name: Publish package to Test PyPI
         if: startsWith(github.ref, 'refs/tags')
