--- a/.github/workflows/testrelease.yaml
+++ b/.github/workflows/testrelease.yaml
@@ -44,7 +44,8 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: package-artifact
-          path: dist/
+          path: dist/*.tar.gz
+          if-no-files-found: error
 
       - name: Publish package to Test PyPI
         if: startsWith(github.ref, 'refs/tags')
