--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -45,7 +45,8 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: package-artifact
-          path: dist/
+          path: dist/*.tar.gz
+          if-no-files-found: error
 
       - name: Publish package to PyPI
         if: startsWith(github.ref, 'refs/tags')
