--- a/.github/workflows/testrelease.yaml
+++ b/.github/workflows/testrelease.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install build wheel twine
+          pip install build wheel twine setuptools_scm
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       # - name: Build and publish to pypi test
