--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,7 +2,6 @@ name: Release
 
 on:
   release:
-    #types: [published, released]
     types: [released]
 
 jobs:
@@ -14,8 +13,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-        # with:
-        #   fetch-depth: 0
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
@@ -27,26 +24,11 @@ jobs:
           pip install build wheel twine setuptools_scm
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      # - name: Build and publish to pypi
-      #   env:
-      #     TWINE_USERNAME: ${{ secrets.PYPI_USERNAME_PROD }}
-      #     TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD_PROD }}
-      #   run: |
-      #     python -m build --sdist --wheel
-      #     python -m twine check dist/*
-      #     twine upload dist/* -r pypi
-
       - name: Build package
         run: |
           python -m build --sdist --wheel --outdir dist/ .
           python -m twine check dist/*
-
-      - name: Upload package artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: package-artifact
-          path: dist/*.tar.gz
-          if-no-files-found: error
+          python -m setuptools_scm --strip-dev
 
       - name: Publish package to PyPI
         if: startsWith(github.ref, 'refs/tags')
