--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -52,18 +52,4 @@ jobs:
         run: |
           python -m build --sdist --wheel --outdir dist/ .
           python -m twine check dist/*
-
-      - name: Upload package artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: package
-          path: dist/*.tar.gz
-          if-no-files-found: error
-
-      # - name: Test upload package
-      #   uses: pypa/gh-action-pypi-publish@master
-      #   with:
-      #     password: ${{ secrets.PYPI_TOKEN_TEST }}
-      #     repository_url: https://test.pypi.org/legacy/
-      #     print_hash: true
-      #     skip_existing: true
+          python -m setuptools_scm --strip-dev
