--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [build-system]
 requires = [
     "setuptools>=42",
-    "wheel",
-    "setuptools_scm",
+    "wheel>=0.37.0",
+    "setuptools_scm>=6.4.2",
     "pytest>=5,<8",
 ]
 build-backend = "setuptools.build_meta"
