--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ project_urls =
     Bug Tracker = https://github.com/robinostlund/volkswagencarnet/issues
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: Apache Software License
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Operating System :: OS Independent
 
 [options]
