removing tests from package

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -50,6 +50,6 @@ jobs:
 
       - name: Test build package
         run: |
-          python -m build --sdist --wheel --outdir dist/ .
+          python -m build --outdir dist/ 
           python -m twine check dist/*
           python -m setuptools_scm --strip-dev
