--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
-          flake8 . --select=E9,F63,F7,F82
+          flake8 . --select=E9,F63,F7,F82,F841,E266
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --exit-zero --max-complexity=10 --max-line-length=127
 
