adding black lint

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -46,6 +46,9 @@ jobs:
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --exit-zero --max-complexity=10 --max-line-length=127
 
+      - name: Lint with black
+        uses: psf/black@stable
+
       - name: Test with pytest
         run: |
           pytest
