adding black lint

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,9 +43,9 @@ exclude =
     *.md,
     *.cfg
 
-max_line_length = 250
+max_line_length = 120
 count = True
-inline_quotes = single
+inline_quotes = double
 show_source = True
 statistics = True
 
