--- a/setup.cfg
+++ b/setup.cfg
@@ -26,12 +26,23 @@ exclude =
     tests.*
 
 [flake8]
+# To work with Black
+# E501: line too long
+# W503: Line break occurred before a binary operator
+# E203: Whitespace before ':'
+# D202 No blank lines allowed after function docstring
+# W504 line break after binary operator
 ignore =
     E722,
     I201,
     W503,
     CFQ001,
-    CFQ002
+    CFQ002,
+    E501,
+    W503,
+    E203,
+    D202,
+    W504
 
 filename =
     *.py
@@ -52,7 +63,7 @@ statistics = True
 #format = {yellow_bold}%(row)d${reset}:${green_bold}%(col)d${reset}: ${red_bold}%(code)s${reset} %(text)s
 
 [pycodestyle]
-max_line_length=250
+max_line_length=120
 statistics = True
 ignore = E722
 count = True
