Add initial extra tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -72,6 +72,14 @@ show_source = True
 
 [tool:pytest]
 minversion = 5.4.3
-addopts = -ra -q
+addopts = -ra -q --cov=volkswagencarnet --cov-report html
 testpaths = tests
 python_files = *_test.py
+
+[coverage:run]
+branch = True
+omit = tests/*,volkswagencarnet/version.py  # define paths to omit
+
+[coverage:report]
+#show_missing = True
+skip_covered = True
