--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,4 @@
 [pytest]
 asyncio_mode=strict
-addopts = --doctest-modules
+addopts = -ra --doctest-modules --cov=volkswagencarnet --cov-report term --cov-report html
+minversion = 5.4.3
