Show also fully covered files in coverage output

--- a/setup.cfg
+++ b/setup.cfg
@@ -82,4 +82,4 @@ omit = tests/*,volkswagencarnet/version.py  # define paths to omit
 
 [coverage:report]
 #show_missing = True
-skip_covered = True
+skip_covered = False
