Add tests for vw_utilities.py

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,6 @@
 [pytest]
 asyncio_mode=strict
-addopts = -ra --doctest-modules --cov=volkswagencarnet --cov-report term --cov-report html
+# addopts = -ra --doctest-modules --cov=volkswagencarnet --cov-report term --cov-report html
+# addopts = -ra --cov=volkswagencarnet --cov-report term --cov-report html
+addopts = -ra --maxfail=10
 minversion = 5.4.3
