--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,4 @@
 [pytest]
 asyncio_mode=strict
-# addopts = -ra --doctest-modules --cov=volkswagencarnet --cov-report term --cov-report html
-# addopts = -ra --cov=volkswagencarnet --cov-report term --cov-report html
-addopts = -ra --maxfail=10
+addopts = -ra
 minversion = 5.4.3
