--- a/.github/workflows/codecov.yaml
+++ b/.github/workflows/codecov.yaml
@@ -29,7 +29,8 @@ jobs:
           directory: ./coverage/reports/
           env_vars: OS,PYTHON
           fail_ci_if_error: true
-          files: ./coverage1.xml,./coverage2.xml
+          files: ./coverage.xml
           flags: unittests
           name: codecov-volkswagencarnet
-          path_to_write_report: ./coverage/codecov_report.txt
+          # path_to_write_report: ./coverage/codecov_report.txt
+          verbose: true
