--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,7 @@ long_description_content_type = text/markdown
 url = https://github.com/robinostlund/volkswagencarnet
 project_urls =
     Bug Tracker = https://github.com/robinostlund/volkswagencarnet/issues
+license = GPLv3
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
