--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,11 @@ classifiers =
     Operating System :: OS Independent
 
 [options]
+install_requires =
+    lxml
+    beautifulsoup4
+    aiohttp
+    pyjwt
 package_dir =
   = .
 packages = find:
