Add freezegun test dependency workflow tweaks

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -15,8 +15,10 @@ categories:
       - "bug"
 
   - title: "🧰 Maintenance"
-    label:
+    labels:
       - "dependencies"
+      - "refactoring"
+      - "tests"
 
 version-resolver:
   major:
