--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = [
     "setuptools>=45",
     "wheel>=0.37.0",
     "setuptools_scm>=6.x",
-    "pytest>=5,<8",
+    "pytest>=6,<8",
 ]
 build-backend = "setuptools.build_meta"
 
@@ -13,7 +13,7 @@ write_to = "volkswagencarnet/version.py"
 
 [tool.black]
 line-length = 120
-target-version = ['py36', 'py37', 'py38', 'py39', 'py310']
+target-version = ['py37', 'py38', 'py39', 'py310']
 include = '\.pyi?$'
 extend-exclude = '''
 /(
@@ -23,3 +23,10 @@ extend-exclude = '''
   | profiling
 )/
 '''
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-ra"
+asyncio_mode = "strict"
+testpaths = ["tests"]
+python_files = ["*_test.py"]
