--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,12 +10,20 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
-  -   repo: https://github.com/psf/black
-      rev: '22.1.0'
-      hooks:
-        - id: black
+  - repo: https://github.com/psf/black
+    rev: '22.1.0'
+    hooks:
+      - id: black
   - repo: https://github.com/pycqa/flake8
-    rev: '4.0.0'
+    rev: '4.0.1'
     hooks:
       - id: flake8
         additional_dependencies: [ flake8-docstrings ]
+  - repo: local
+    hooks:
+      - id: autoupdate
+        entry: pre-commit autoupdate
+        language: system
+        name: self-update
+        files: some-expression-to-never-match-a-real-file
+        always_run: true
