Enable pre-commit update

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -8,5 +8,8 @@
   "internalChecksFilter": "strict",
   "pip_requirements": {
     "fileMatch": ["requirements-test.(txt|pip)"]
+  },
+  "pre-commit": {
+    "enabled": true
   }
 }
