--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,20 +2,37 @@
 # See https://pre-commit.com/hooks.html for more hooks
 default_language_version:
   python: python3.9
+
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.2.0
     hooks:
-      - id: trailing-whitespace
-      - id: end-of-file-fixer
+      - id: check-json
+      - id: check-toml
       - id: check-yaml
       - id: check-added-large-files
+      - id: debug-statements
+      - id: end-of-file-fixer
+      - id: no-commit-to-branch
+        args: ['--branch', 'main', '--branch', 'master']
+      - id: requirements-txt-fixer
+      - id: trailing-whitespace
+
   -   repo: https://github.com/psf/black
       rev: '22.1.0'
       hooks:
         - id: black
+
   - repo: https://github.com/pycqa/flake8
     rev: '4.0.0'
     hooks:
       - id: flake8
         additional_dependencies: [ flake8-docstrings ]
+
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v2.31.0
+    hooks:
+      - id: pyupgrade
+        args: [
+          '--py37-plus'
+        ]
