--- a/.github/workflows/snyk.yaml
+++ b/.github/workflows/snyk.yaml
@@ -10,6 +10,7 @@ jobs:
 
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/python@master
+        continue-on-error: true # To make sure that SARIF upload gets called
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
