--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -22,35 +22,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v5
+      - name: Check ruff
+        uses: chartboost/ruff-action@v1
         with:
-          python-version: "3.11"
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 black
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-      - name: Lint with flake8
-        run: |
-          # stop the build if there are Python syntax errors or undefined names
-          flake8 . --select=E9,F63,F7,F82,F841,E266
-          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 . --exit-zero --max-complexity=10 --max-line-length=127
-
-      - name: Lint with black
-        #uses: psf/black@stable
-        run: |
-          black --check --diff --color .
+          args: 'format --diff'
 
   test-n-build:
     name: Test and Build
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.11", "3.12"]
 
     steps:
       - name: Checkout code
