--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,4 +1,4 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
+# This workflow will install Python dependencies, run tests and ruff with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
 name: Validate
@@ -14,8 +14,8 @@ on:
       - master
 
 jobs:
-  lint:
-    name: Lint
+  ruff:
+    name: Ruff
     runs-on: ubuntu-latest
 
     steps:
