Updating release workflow

--- a/.github/workflows/testrelease.yaml
+++ b/.github/workflows/testrelease.yaml
@@ -31,7 +31,7 @@ jobs:
           python -m setuptools_scm --strip-dev
 
       - name: Publish package to Test PyPI
-        uses: pypa/gh-action-pypi-publish@master
+        uses: pypa/gh-action-pypi-publish@release/v1
         with:
           password: ${{ secrets.PYPI_TOKEN_TEST }}
           repository_url: https://test.pypi.org/legacy/
