--- a/.github/workflows/testrelease.yaml
+++ b/.github/workflows/testrelease.yaml
@@ -34,6 +34,6 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           password: ${{ secrets.PYPI_TOKEN_TEST }}
-          repository_url: https://test.pypi.org/legacy/
-          print_hash: true
-          skip_existing: true
+          repository-url: https://test.pypi.org/legacy/
+          print-hash: true
+          skip-existing: true
