Add active ventilation sensors, fix credentials import path in tests, fix credentials.py.sample

--- a/tests/credentials.py.sample
+++ b/tests/credentials.py.sample
@@ -2,5 +2,5 @@
 # Oh, and replace the data in credentials.py with your own
 spin = '1234'
 username = 'john.doe@localhost.localnet'
-pasword = 'passw0rd'
+password = 'passw0rd'
 vin = 'WVWZZXXXXX1234567'
